2008-08-12  Akira TAGOH  <tagoh@redhat.com>

	* tests/gcit_11.c (imsettings_suite): Fix a typo.

2008-07-23  Akira TAGOH  <tagoh@redhat.com>

	* data/xinput.sh.in.in (check_xsettings_manager): Add more desktop
	session to check.

2008-07-22  Akira TAGOH  <tagoh@redhat.com>

	* data/xinput.sh.in.in: run im-xsettings-daemon as needed.

	* src/factory_xsettings.c (_set_value): set correct key to XSETTINGS.

	* src/xsettings-common.[ch]: a copy of reference implementation for
	XSETTINGS common functions.

	* src/xsettings-manager.[ch]: a copy of reference implementation for
	XSETTINGS manager.

	* src/factory_xsettings.c: simple XSETTINGS daemon.

2008-07-17  Akira TAGOH  <tagoh@redhat.com>

	* src/factory_info.c (imsettings_info_get_error_quark): new.
	(imsettings_info_monitor_new): new.
	(imsettings_info_monitor_free): new.
	(imsettings_info_monitor_targeted_new): new.
	(imsettings_info_monitor_targeted_free): new.
	(imsettings_info_manager_add_info): change the behavior a bit to update
	the hash anyway.
	(imsettings_info_manager_remove_info): make a copy of IM name
	before removing from the hash. that may possibly points out
	the invalid pointer.
	(imsettings_info_manager_real_changed_xinputd): sanity check of
	the filename.
	(imsettings_info_manager_real_changed_xinputd): at the end, notify
	the change of the file to the handlers of xinputrc and .xinputrc to
	not miss the flag for them.
	this is the kind of the race condition issue.
	(imsettings_info_manager_setup_monitor_for_xinputrc_target): new.

2008-07-16  Akira TAGOH  <tagoh@redhat.com>

	* imsettings/imsettings-info.c (imsettings_info_set_property):
	parameterize the homedir instead of hardcoded path.

	* tests/rhbz_431291.c: Add a testcase for the user specific conf.

	* utils/imsettings-info.c (main): show up the icon file.

2008-07-15  Akira TAGOH  <tagoh@redhat.com>

	* tests/rhbz_455363.c: a testcase for rhbz#455363.

2008-07-08  Akira TAGOH  <tagoh@redhat.com>
