@@ -1,0 +1,5 @@
+XIM=kinput2
+XIM_PROGRAM=/usr/bin/kinput2
+XIM_ARGS="-canna +kinput -xim"
+GTK_IM_MODULE=xim
+QT_IM_MODULE=xim
