@@ -1,0 +1,26 @@
+# -*- mode: shell-script -*-
+# xim - xinput script to choose the better XIM server against current locale.
+#
+# Copyright (C) 2006-2008 Red Hat, Inc. All rights reserved.
+#
+# This script is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+#
+# This script is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place - Suite 330,
+# Boston, MA 02111-1307, USA.
+
+basedir=`dirname $1`
+xim_tmplang=${LC_CTYPE:-${LANG:-"en_US.UTF-8"}}
+xim_lang_region=$(echo $xim_tmplang | sed -e 's/\..*//')
+[ -r ${basedir}/${xim_lang_region} ] && source ${basedir}/${xim_lang_region} || source ${basedir}/none.conf
+
+unset xim_tmplang xim_lang_region
