@@ -1,0 +1,1 @@
+xinput.d/scim.conf
