@@ -1,0 +1,6 @@
+XIM=none
+XIM_PROGRAM=
+XIM_ARGS=
+GTK_IM_MODULE=
+QT_IM_MODULE=
+IMSETTINGS_IGNORE_ME=yes
